完善并发节点的onevent内联